docker-compose added, nginx folder added, interventionFront added, intervention changed, .github main.yml changed

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ web_modules/
 .env.local
 
 /apps/intervention/.env
+/apps/interventionFront/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -188,5 +189,4 @@ $RECYCLE.BIN/
 
 apps/intervention/node_modules
 apps/interventionFront/node_modules
-
 apps/interventionFront/dist/
