--- a/apps/interventionFront/package.json
+++ b/apps/interventionFront/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.22.5",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
+    "dotenv-webpack": "^8.0.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3"
   }
