main  .gitignore changed, dist folder added to repository

--- a/.gitignore
+++ b/.gitignore
@@ -111,7 +111,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+#dist
 
 # Gatsby files
 .cache/
@@ -120,7 +120,7 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+#.vuepress/dist
 
 # vuepress v2.x temp and cache directory
 .temp
