--- a/apps/interventionFront/package.json
+++ b/apps/interventionFront/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --mode production "
+    "start": "webpack serve --open",
+    "build": "webpack --mode production",
+    "prod": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
